2010-06-03  Alvin Delagon  <adelagon@flumotion.com>

	patch by: jurbanski

	* flumotion/component/bouncers/algorithms/icalbouncer.xml:
	* flumotion/component/bouncers/algorithms/ipbouncer.xml:
	* flumotion/component/bouncers/algorithms/tokentest.xml:
	* flumotion/component/bouncers/base.py:
	* flumotion/component/bouncers/multibouncer.xml:
	* flumotion/component/consumers/httpstreamer/httpstreamer.xml:
	* flumotion/component/misc/httpserver/httpserver.xml:
	Correct the BouncerAlgorithm socket path.

2010-06-03  Alvin Delagon  <adelagon@flumotion.com>

	* flumotion/component/bouncers/algorithms/icalbouncer.xml:
	* flumotion/component/bouncers/algorithms/ipbouncer.xml:
	* flumotion/component/bouncers/algorithms/tokentest.xml:
	* flumotion/component/bouncers/multibouncer.xml:
	* flumotion/component/consumers/httpstreamer/httpstreamer.xml:
	* flumotion/component/misc/httpserver/httpserver.xml:
	The flumotion.component.bouncers.algorithms.BouncerAlgorithm
	socket was right all along.

2010-06-03  Alvin Delagon  <adelagon@flumotion.com>

	* flumotion/component/bouncers/algorithms/icalbouncer.xml:
	* flumotion/component/bouncers/algorithms/ipbouncer.xml:
	* flumotion/component/bouncers/algorithms/tokentest.xml:
	* flumotion/component/bouncers/plug.xml:
	Fixed incorrect socket locations.

2010-06-03  Alvin Delagon  <adelagon@flumotion.com>


	* common/validate-registry.py:
	Remove the check where the plug type name should be the
	same as its class name.

	* flumotion/component/bouncers/base.py:
	* flumotion/component/bouncers/multibouncer.xml:
	* flumotion/component/consumers/httpstreamer/httpstreamer.xml:
	* flumotion/component/misc/httpserver/httpserver.xml:
	Fixed the source location of sockets.

2010-06-03  Alvin Delagon <adelagon@flumotion.com>

	patch by: jurbanski

	* flumotion/component/bouncers/combinator.py (added):
	* flumotion/component/bouncers/multibouncerplug.py (added):
	* flumotion/component/bouncers/multibouncerplug.xml (added):